<resources>
    <string name="app_name">TodoListITT</string>

    <string name="mis_tareas">Mis Tareas</string>
    <string name="imagen_de_fondo">imagen de fondo</string>
    <string name="itt">ITT</string>
    <string name="usuario">Usuario</string>
    <string name="hint">hint</string>
    <string name="pass">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="terminado">Terminado</string>
    <string name="registro">REGISTRO</string>
    <string name="crear_usuario">CREAR USUARIO</string>
</resources>